--- a/i18n/ar/docusaurus-plugin-content-docs/current/getting-started/commands.mdx
+++ b/i18n/ar/docusaurus-plugin-content-docs/current/getting-started/commands.mdx
@@ -103,7 +103,7 @@ description: قائمة بجميع الأوامر ، بما في ذلك استخ
 
 | الأمر | الشرح | الإستخدام |
 | ------------- |:-------------:|:-------------:|
-| /vip info | رؤية معلومات البرميوم الخاص بك | /vip |
+| /vip info | رؤية معلومات البرميوم الخاص بك | /vip info |
 | /vip move | نقل البرميوم الخاص بك لسيرفر أخر `باقة 2` | /vip move [number] |
 | /vip restart | إعادة تشغيل البرميوم الخاص بك `باقة 2` | /vip restart |
 | /vip whitelist | إضافة مستخدم إلى القائمة البيضاء للسماح له بدخول لوحة التحكم | /vip whitelist [user] |
